examples/test/testpolicy109.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy109
  namespace: namespace464
spec:
  podSelector:
    matchLabels:
      key5: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value39
          key11: value11
      podSelector:
        matchLabels:
          key8: value25
          key49: value1
          key23: value23
